...
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="9Vg-yF-3bQ"/>
                                    <constraint firstAttribute="height" constant="50" id="KxQ-XI-wSk"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <state key="normal" title="进入">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="enterAction" destination="HC7-9s-ffJ" eventType="touchUpInside" id="GGM-pV-nqv"/>
                                </connections>
                            </button>
...
